--- a/package.json
+++ b/package.json
@@ -40,14 +40,17 @@
     "apollo-link-http": "~1.5.9",
     "apollo-link-persisted-queries": "~0.2.2",
     "axios": "~0.18.0",
-    "bootstrap": "~4.2.1",
+    "bootstrap": "^4.2.1",
     "graphql": "~14.0.2",
     "graphql-tag": "~2.10.0",
     "i18next": "~13.1.2",
     "i18next-fetch-backend": "~2.0.0",
     "isomorphic-fetch": "~2.2.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
     "react": "~16.7.0",
     "react-apollo": "~2.3.3",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "~16.7.0",
     "react-helmet": "~5.2.0",
     "react-i18next": "~9.0.2",
