--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "apollo-link-batch-http": "~1.2.6",
     "apollo-link-http": "~1.5.9",
     "apollo-link-persisted-queries": "~0.2.2",
+    "apollo-link-ws": "^1.0.17",
     "axios": "~0.18.0",
     "bootstrap": "^4.2.1",
     "graphql": "~14.0.2",
@@ -56,7 +57,8 @@
     "react-i18next": "~9.0.2",
     "react-router-dom": "~4.3.1",
     "react-scripts": "2.1.3",
-    "serialize-javascript": "~1.6.1"
+    "serialize-javascript": "~1.6.1",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "@babel/register": "~7.0.0",
