prototyped chatroom implementation

--- a/sitecore/config/sugconeu.config
+++ b/sitecore/config/sugconeu.config
@@ -103,7 +103,7 @@
               <content type="Sitecore.Services.GraphQL.Content.ContentSchemaProvider, Sitecore.Services.GraphQL.Content">
                 <!-- scope typed template generation to just this app's templates -->
                 <templates type="Sitecore.Services.GraphQL.Content.TemplateGeneration.Filters.StandardTemplatePredicate, Sitecore.Services.GraphQL.Content">
-                  <database>context</database>
+                  <database>master</database>
                   <paths hint="list:AddIncludedPath">
                     <templates>/sitecore/templates/Project/sugconeu</templates>
                   </paths>
@@ -121,7 +121,11 @@
                   <!-- enable querying on items via this API -->
                   <query name="item" type="Sitecore.Services.GraphQL.Content.Queries.ItemQuery, Sitecore.Services.GraphQL.Content" />
                 </queries>
-
+                                <mutations hint="raw:AddMutation">
+                                    <mutation name="createItem" type="Sitecore.Services.GraphQL.Content.Mutations.CreateItemMutation, Sitecore.Services.GraphQL.Content" />
+                                    <mutation name="updateItem" type="Sitecore.Services.GraphQL.Content.Mutations.UpdateItemMutation, Sitecore.Services.GraphQL.Content" />
+                                    <mutation name="deleteItem" type="Sitecore.Services.GraphQL.Content.Mutations.DeleteItemMutation, Sitecore.Services.GraphQL.Content" />
+                                </mutations>
                                                 <subscriptions hint="raw:AddSubscription">
                                     <subscription name="itemAdded" type="Sitecore.Services.GraphQL.Content.Subscriptions.ItemAddedSubscription, Sitecore.Services.GraphQL.Content" resolve="true" />
                                     <subscription name="itemSaved" type="Sitecore.Services.GraphQL.Content.Subscriptions.ItemSavedSubscription, Sitecore.Services.GraphQL.Content" resolve="true" />
