--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-i18next": "~9.0.2",
     "react-router-dom": "~4.3.1",
     "react-scripts": "2.1.3",
+    "react-timeago": "^4.4.0",
     "serialize-javascript": "~1.6.1",
     "subscriptions-transport-ws": "^0.9.16"
   },
