--- a/data/routes/en.yml
+++ b/data/routes/en.yml
@@ -4,6 +4,8 @@ fields:
 placeholders:
   jss-main:
     - componentName: DemoStructure
+      fields:
+        singleColumn: true
       placeholders:
         jss-demo-main:
           - componentName: TextSection
